--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dvm-poc",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.ts",
   "repository": "https://github.com/fanfares/dvm-poc",
-  "author": "rleed <rleed1@pm.me>",
-  "license": "TBD",
   "dependencies": {
     "@types/node": "^20.14.9",
+    "@welshman/lib": "^0.0.11",
+    "@welshman/net": "^0.0.14",
+    "@welshman/util": "^0.0.16",
+    "dotenv": "^16.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   }
