compile with coracle code

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@welshman/net": "^0.0.14",
     "@welshman/util": "^0.0.16",
     "dotenv": "^16.4.5",
+    "hurdak": "^0.2.10",
+    "nostr-tools": "^2.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   }
